2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (canonicalize): Handle "..".
	(grub_cpio_find_file) [MODE_USTAR]: Handle hardlinks.

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (GRUB_BTRFS_ITEM_TYPE_INODE_REF): New enum value.
	(find_path): Handle "." and "..".

2012-05-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_file): New field hardlink.
	(GRUB_AFFS_FILETYPE_HARDLINK): New enum value.
	(grub_affs_iterate_dir): Handle hardlinks.

2012-05-26  Matthew Garrett  <mjg@redhat.com>

	* grub-core/term/efi/console.c (grub_efi_console_init): Set text mode.
	(grub_efi_console_fini): Likewise.
	* grub-core/video/efi_gop.c (framebuffer): New field offscreen.
	(grub_video_gop_fill_mode_info): Rename to ...
	(grub_video_gop_fill_real_mode_info): ... this.
	(grub_video_gop_fill_mode_info): New function.
	(grub_video_gop_setup): Setup double framebuffer.
	(grub_video_gop_get_info_and_fini): Use original framebuffer.
	Free offscreen.
	(grub_video_gop_swap_buffers): Copy framebuffer.
	(grub_video_gop_fini): Free offscreen buffer.
	* include/grub/efi/graphics_output.h (grub_efi_gop_blt_operation_t):
	New enum.
	(grub_efi_gop_blt_pixel): New struct.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* gentpl.py: Remove error disabling for objconv.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Remove -Wunitialized as it's not available on older
	compilers.

2012-05-26  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix extent overflow comparator.

	* grub-core/fs/hfsplus.c (grub_hfsplus_extkey_internal): Add type.
	(grub_hfsplus_read_block): Set type.
	(grub_hfsplus_cmp_extkey): Compare type.

2012-05-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-fstest.c (cmd_cmp): Fix stat'ing of wrong file.

2012-05-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfsplus.c (grub_hfsplus_label): Use found ptr rather
	than 0.
